{
    "name": "GameControls",
    "maps": [
        {
            "name": "Player",
            "id": "eaf58eef-2734-4c8b-b39e-bd754eccf189",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "eda3c464-17eb-45a4-b937-2dfa1ffc41ff",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Look",
                    "type": "Value",
                    "id": "06d5b7e0-1787-46ed-b2b8-ec4ed95f49df",
                    "expectedControlType": "Vector2",
                    "processors": "InvertVector2(invertX=false),ScaleVector2(x=0.5,y=0.5)",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "e3e9aaa2-fbbc-4f65-934e-e4217ab0bde4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Sprint",
                    "type": "PassThrough",
                    "id": "75bd4750-22ce-4b26-8f01-8703fa00d485",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LockOn",
                    "type": "Button",
                    "id": "992560ef-e3f6-426b-996a-460963dc60f6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Interaction",
                    "type": "Button",
                    "id": "fc86f71e-fc7e-4fb5-b161-212a05183db5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Attack",
                    "type": "Button",
                    "id": "90d88b96-8c07-4611-b404-250c95cdabbd",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Parry",
                    "type": "Button",
                    "id": "4af955f5-af64-44b7-9979-379b1026be05",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Defense",
                    "type": "PassThrough",
                    "id": "2babc61f-e0df-4bde-97a8-865c6b0319a1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "CursorToggle",
                    "type": "Button",
                    "id": "0c8001c2-d97f-4144-96f5-9d052a9929b7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ItemInventory",
                    "type": "Button",
                    "id": "393d8263-91f7-4bfe-a419-54da50c73f35",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "EquipmentInventory",
                    "type": "Button",
                    "id": "b251363b-cc58-4c39-8f99-bbb6be2ea358",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SkillTree",
                    "type": "Button",
                    "id": "0dea9b20-2126-412c-a0c3-461f212f9aaa",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Quest",
                    "type": "Button",
                    "id": "4aefb08a-aa02-4872-99ac-24ca212d291b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Quick",
                    "type": "Button",
                    "id": "1366229e-a390-4a8c-9fb7-3f3290817645",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Cancel",
                    "type": "Button",
                    "id": "9d94b2d7-09fe-468c-81d1-2a2dbab86008",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "ebb91a82-dcdf-4f08-98f1-57c88b5d808f",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "50e20cc5-c82b-401f-9b3c-bab2874a958b",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard/Mouse",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "758b32d6-dfb9-4916-a0ee-e4e8dd8fea8d",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard/Mouse",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "06db10f8-56e0-4770-870d-2e9de7f0fdc1",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard/Mouse",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "842576ef-4979-4e5f-a5a7-5bdafe2944ab",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard/Mouse",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "53569114-0488-4467-ba0a-ce9e5d0d8f90",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard/Mouse",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d94d6ada-51f0-4fd8-87b6-5b09e6fe2752",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard/Mouse",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "765599b0-a723-4fef-91cf-a905760cb575",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard/Mouse",
                    "action": "Sprint",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "42ce7b53-45d4-4878-8249-686e633648bc",
                    "path": "<Mouse>/middleButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard/Mouse",
                    "action": "LockOn",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "872320c2-d3df-403a-8672-bd073cf56246",
                    "path": "<Keyboard>/i",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard/Mouse",
                    "action": "ItemInventory",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "387a13aa-2082-4629-aab9-61a801ca5478",
                    "path": "<Keyboard>/u",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard/Mouse",
                    "action": "EquipmentInventory",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dd583f26-d98e-4c94-bce2-08959b4a2f6a",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard/Mouse",
                    "action": "Interaction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8f0f9138-4dcc-4b62-bafb-02b2785a94c6",
                    "path": "<Keyboard>/tab",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard/Mouse",
                    "action": "CursorToggle",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a858b77e-433b-4b92-a168-925ad3825dd3",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "Scale(factor=0)",
                    "groups": "Keyboard/Mouse",
                    "action": "Quick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "37b1eb6a-527f-4b82-9e8c-be32d532cfd8",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "Scale",
                    "groups": "Keyboard/Mouse",
                    "action": "Quick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9092aa4f-9158-4f3e-a1b9-f8473adbe3e9",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "Scale(factor=2)",
                    "groups": "Keyboard/Mouse",
                    "action": "Quick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "80395d73-ee24-43d9-baa8-4ead952f8a9d",
                    "path": "<Keyboard>/4",
                    "interactions": "",
                    "processors": "Scale(factor=3)",
                    "groups": "Keyboard/Mouse",
                    "action": "Quick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "451fc855-9507-45e7-9039-3f35db520b5b",
                    "path": "<Keyboard>/5",
                    "interactions": "",
                    "processors": "Scale(factor=4)",
                    "groups": "Keyboard/Mouse",
                    "action": "Quick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f03c9160-939c-45f3-83de-79c3b3108f56",
                    "path": "<Keyboard>/6",
                    "interactions": "",
                    "processors": "Scale(factor=5)",
                    "groups": "Keyboard/Mouse",
                    "action": "Quick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7f840136-2d3e-4d3e-96c8-2c30609b13c4",
                    "path": "<Keyboard>/7",
                    "interactions": "",
                    "processors": "Scale(factor=6)",
                    "groups": "Keyboard/Mouse",
                    "action": "Quick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5a62bd60-9062-49fe-ab62-4134f39681ba",
                    "path": "<Keyboard>/8",
                    "interactions": "",
                    "processors": "Scale(factor=7)",
                    "groups": "Keyboard/Mouse",
                    "action": "Quick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "799216d1-2e27-4daf-958e-b46f18215d66",
                    "path": "<Keyboard>/9",
                    "interactions": "",
                    "processors": "Scale(factor=8)",
                    "groups": "Keyboard/Mouse",
                    "action": "Quick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7348c988-0865-4631-bd62-bb6ab518d4fd",
                    "path": "<Keyboard>/0",
                    "interactions": "",
                    "processors": "Scale(factor=9)",
                    "groups": "Keyboard/Mouse",
                    "action": "Quick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "98cd9bdb-a30a-4bde-8738-165d8f381a97",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard/Mouse",
                    "action": "Cancel",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4d90164b-17ff-4979-9ad0-fd1abf449846",
                    "path": "<Keyboard>/k",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard/Mouse",
                    "action": "SkillTree",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2760532c-4d46-4ca8-92d5-7aac5f87aae7",
                    "path": "<Keyboard>/j",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard/Mouse",
                    "action": "Quest",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8a2b3c6c-3c2a-4aa3-bf44-22da93ccf770",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard/Mouse",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ff37d553-1367-48c5-a887-9af1007a713a",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard/Mouse",
                    "action": "Defense",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e7d0326a-9e88-4652-82c0-f3e9ee143a7c",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard/Mouse",
                    "action": "Parry",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard/Mouse",
            "bindingGroup": "Keyboard/Mouse",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}